--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,9 +14,8 @@
             Empleados
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="/empleados">Listar</a></li>
+            <li><a class="dropdown-item" routerLink="/empleados">Listar | Editar</a></li>
             <li><a class="dropdown-item" routerLink="/empleados/add">Agregar</a></li>
-            <li><a class="dropdown-item" routerLink="/empleados/delete">Eliminar</a></li>
           </ul>
         </li>
         <li class="nav-item">
