--- a/src/app/components/empleados/empleados-add/empleados-add.component.html
+++ b/src/app/components/empleados/empleados-add/empleados-add.component.html
@@ -40,8 +40,12 @@
     </div>
     <div class="col-md-6">
       <label for="archivoFoto" class="form-label">Identificación del Trabajador</label>
-      <input class="form-control" type="file" id="archivoFoto" name="archivoFoto" [(ngModel)]="addEmpleadoRequest.archivoFoto">
+      <input class="form-control" type="text" id="archivoFoto" name="archivoFoto" [(ngModel)]="addEmpleadoRequest.archivoFoto">
     </div>
+<!--    <div class="col-md-6">-->
+<!--      <label for="archivoFoto" class="form-label">Identificación del Trabajador</label>-->
+<!--      <input class="form-control" type="file" id="archivoFoto" name="archivoFoto" [(ngModel)]="addEmpleadoRequest.archivoFoto">-->
+<!--    </div>-->
     <div class="col-12">
       <button type="submit" class="btn btn-primary">REGISTRAR</button>
     </div>
